--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79aaa5">  <td>19/04/25 13:22:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MakeMyTripHomePageTest.beforeMethod()[pri:0, instance:testspack.MakeMyTripHomePageTest@4b2bac3f]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@111900554</td>   <td></td> </tr>
-<tr bgcolor="79aaa5">  <td>19/04/25 13:22:27</td>   <td>10715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MakeMyTripHomePageTest.citiesselection()[pri:0, instance:testspack.MakeMyTripHomePageTest@4b2bac3f]">citiesselection</td> 
-  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="79aaa5">  <td>19/04/25 14:40:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MakeMyTripHomePageTest.afterMethod()[pri:0, instance:testspack.MakeMyTripHomePageTest@26794848]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@31114735</td>   <td></td> </tr>
+<tr bgcolor="79aaa5">  <td>19/04/25 14:40:27</td>   <td>-29965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MakeMyTripHomePageTest.beforeMethod()[pri:0, instance:testspack.MakeMyTripHomePageTest@26794848]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@31114735</td>   <td></td> </tr>
+<tr bgcolor="79aaa5">  <td>19/04/25 14:40:38</td>   <td>-19043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MakeMyTripHomePageTest.citiesselection()[pri:0, instance:testspack.MakeMyTripHomePageTest@26794848]">citiesselection</td> 
+  <td>main@31114735</td>   <td></td> </tr>
 </table>
