--- a/test-output/old/Suite1/methods.html
+++ b/test-output/old/Suite1/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="62e0ad">  <td>19/04/25 13:56:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MakeMyTripHomePageTest.beforeMethod()[pri:0, instance:testspack.MakeMyTripHomePageTest@752325ad]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1007412025</td>   <td></td> </tr>
-<tr bgcolor="62e0ad">  <td>19/04/25 13:56:45</td>   <td>10989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MakeMyTripHomePageTest.citiesselection()[pri:0, instance:testspack.MakeMyTripHomePageTest@752325ad]">citiesselection</td> 
-  <td>main@1007412025</td>   <td></td> </tr>
+<tr bgcolor="7de4c7">  <td>19/04/25 14:53:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MakeMyTripHomePageTest.beforeMethod()[pri:0, instance:testspack.MakeMyTripHomePageTest@7817fd62]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@825962150</td>   <td></td> </tr>
+<tr bgcolor="7de4c7">  <td>19/04/25 14:53:20</td>   <td>10500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MakeMyTripHomePageTest.citiesselection()[pri:0, instance:testspack.MakeMyTripHomePageTest@7817fd62]">citiesselection</td> 
+  <td>main@825962150</td>   <td></td> </tr>
+<tr bgcolor="7de4c7">  <td>19/04/25 14:53:39</td>   <td>29592</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MakeMyTripHomePageTest.afterMethod()[pri:0, instance:testspack.MakeMyTripHomePageTest@7817fd62]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@825962150</td>   <td></td> </tr>
 </table>
